src/test/ui/issues/issue-61106.stderr
error[E0308]: mismatched types
  --> $DIR/issue-61106.rs:3:9
   |
LL |     foo(x.clone());
   |         ^^^^^^^^^
   |         |
   |         expected &str, found struct `std::string::String`
   |         help: consider borrowing here: `&x`
   |
   = note: expected type `std::string::String`
              found type `&str`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
